[tool.poetry]
name = "repl_python3_Higher-lower-Game"
version = "0.1.0"
description = ""
authors = ["Vinod1999 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
